Multi(branch)strategy simulation tool is updated.

--- a/multibranch.cfg
+++ b/multibranch.cfg
@@ -2,11 +2,32 @@
 [DEFAULT]
 strTimesFileName: times.data
 bUseTFDepth: 1
-nTFDepth: 8
-nFixAccounts: 10
-[Forging]
-bUseTFDepth: 1
-nTFDepth: 16
+nTFDepth: 40
+nFixAccounts: 2
+isPublishing: 1
+isMarkable: 0
+isMarkFollowing: 0
+nBalanceWeight: 9
+
 [Network]
-nFixAccounts: 8
+nFixAccounts: 3
+
+[Account 1]
+nBalanceWeight: 2
+isMarkFollowing: 0
+isMarkable: 0
+#bUseTFDepth: 1
+#nTFDepth: 0
+#isPublishing: 0
+
+[Account 3]
+isMarkable: 1
+#nBalanceWeight: 1
+
+#[Account 1]
+#bUseTFDepth: 0
+#nTFDepth: 16
+#isPublishing: 0
+#nBalanceWeight: 15
+
 # more options
